# tMHG-Finder

./: LICENSE  README.md  alf_parameter.drw  consensus_mhg.py  guide_tree_compute.py  guide_tree_group.py  mash_nj_tree.newick  mhg-evo-add-genome.py  mhg-evo.py  mhg_partition_mp.py  process_mhg.py  pyproject.toml  tMHG-Finder-add-genome.py  tMHG-Finder.py
meat/: G000006925,G000299455.txt  MHG_partition-MP.py  MHG_partition.py  __init__.py  acc.bed  align_mhg.py  blastn_process.py  consensus_mhg.py  guide_tree_compute.py  guide_tree_group.py  mafftInput.fasta  mafftOutput.fasta  main.ipynb  main.py  mhg.bed  nj.newick  nj_far.newick  process_mhg.py  single_block_mhg.bed  temp_mafft.fasta  trim_blastn_xml.ipynb
meat/.ipynb_checkpoints/: MHG_partition-checkpoint.ipynb  main-checkpoint.ipynb
meat/temp/: G000006925.fa.ndb  G000006925.fa.nhr  G000006925.fa.nin  G000006925.fa.nsq  G000093065.fa  G000093065.fa.ndb  G000093065.fa.nhr  G000093065.fa.nin  G000093065.fa.nsq  G000299455.fa.ndb  G000299455.fa.nhr  G000299455.fa.nin  G000299455.fa.nsq  G000828515.fa  G000828815.fa  G000973545.fa  G900039485.fa  G900044015.fa  G900048035.fa  G900048035.fa.ndb  G900048035.fa.nhr  G900048035.fa.nin  G900048035.fa.nsq
meat/temp_blastn/: G000093065,G900048035.xml
meat/temp_far/: G000262305.fa  G000262305.fa.ndb  G000262305.fa.nhr  G000262305.fa.nin  G000262305.fa.nsq  G000276705.fa.ndb  G000276705.fa.nhr  G000276705.fa.nin  G000276705.fa.nsq  G000280495.fa.ndb  G000280495.fa.nhr  G000280495.fa.nin  G000280495.fa.nsq  (+36 more)
test_data/: SE001.fasta  SE003.fasta  SE005.fasta
(+17 files in other folders)
